Saving for da night

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <!-- Navbar -->
     <div class="nav-bar">
         <h1>Gabriel Beita-Kiser</h1>
-        <img src="assets/images/profilepic.jpg">
-
-        <nav>
+        <nav class="nav">
             <a id="nav1">About</a>
             <a id="nav2">Portfolio</a>
             <a id="nav3">Contact</a>
