Bio page working, need to style more. Dynamically insert Contact and Portfolio page. Get condensed click function working

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <div class="content-main">
         <div id="section-title"></div>
         <div id="section-image"></div>
-        <div id="section-text"></div>
+        <div id="section-content"></div>
     </div>
 
-    <!-- Social Media Links Bar -->
+   <!--  Social Media Links Bar -->
     <div class="lower-bar">
         <div id="footer1"></div>
         <div id="footer2">
